# agents-lab

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.commandcode/taste/: taste.md
docs/ai/specs/: desktop-local-data-architecture-sqlite.md  desktop-runtime-safety-and-local-logging.md  local-quality-baseline.md  platform-bootstrap-tauri-sqlite-desktop.md
docs/ai/summaries/: desktop-local-data-architecture-sqlite.md  desktop-runtime-safety-and-local-logging.md  local-quality-baseline.md  platform-bootstrap-tauri-sqlite-desktop.md
docs/notes/: ai-crypto-priority-ideas.md
docs/patterns/: theme.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: logging.rs  main.rs
src-tauri/src/db/: migrations.rs
src/features/app-shell/: AppShell.tsx  ErrorBoundary.tsx  LoadingFallback.tsx
src/features/dashboard/: Dashboard.tsx
src/lib/bridge/: tauri-invoke.ts
src/lib/di/: container.ts
src/lib/dto/: common.ts  settings-dto.ts
src/lib/logging/: global-handlers.ts  logger.ts
src/lib/repositories/interfaces/: settings-repository.ts
src/lib/repositories/tauri/: tauri-settings-repository.ts
src/lib/services/: settings-service.test.ts  settings-service.ts
src/store/: useAppStore.ts
